@@ -1,5 +1,10 @@
 2003-09-27  Geoff Davis <geoff@geoffdavis.net> (plonista)
 
+   * Bound the state to the global variable 'state' in controller scripts and
+     validators.  One less line of code to write!
+
+2003-09-27  Geoff Davis <geoff@geoffdavis.net> (plonista)
+
    * Added a forgotten import statement in ControllerPythonScript
 
    * ControllerValidators don't use actions or validators so the actions tab has
